QA Project/Force/force-app/main/default/objects/Course_Rate__c/Course_Rate__c.object-meta.xml
<CustomObject>
    <description>An object that has all the information needed for the training co-ordinator to add instructors and the instructor&apos;s course fees when creating new courses.</description>
    <label>Course Rate</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>