QA Project/Force/force-app/main/default/objects/Course_Rate__c/fields/Course_Fee__c.field-meta.xml
<CustomField>
    <fullName>Course_Fee__c</fullName>
    <label>Course Fee</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>