QA Project/Force/force-app/main/default/objects/Course_Rate__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Type</label>
    <referenceTo>Course_Type__c</referenceTo>
    <relationshipLabel>Course Rates</relationshipLabel>
    <relationshipName>Course_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>