QA Project/Force/force-app/main/default/objects/Course_Rate__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>